--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "mongodb-memory-server": "^8.7.1",
     "nodemon": "^2.0.18",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
