--- a/package.json
+++ b/package.json
@@ -41,7 +41,10 @@
   },
   "dependencies": {
     "async": "^3.2.4",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0"
